--- a/style.css
+++ b/style.css
@@ -1,37 +1,41 @@
 .RadialProgress {
   --hue: 220;
   --holesize: 65%;
-  --track-bg: hsl(233 34% 92%);
-  
-  block-size: 50vmin;
-  inline-size: 50vmin;
-  min-inline-size: 100px;
-  min-block-size: 100px;
-  display: grid;
+  --track-bg: hsl(233, 34%, 92%);
+  --progress: 10deg;
+
+  height: 50vmin;
+  background:conic-gradient(#7d2ae8 10deg, #ededed 0deg);
+  border-radius: 50%;
+  width: 50vmin;
+  min-width: 100px;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
   place-items: center;
   position: relative;
   font-weight: 700;
-  font-size: max(10vmin, 1.4rem);
-  
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-radius: 50%;
-    z-index: -1;
-    background: conic-gradient(
-      hsl(var(--hue) 100% 70%),
-      hsl(var(--hue) 100% 40%),
-      hsl(var(--hue) 100% 70%) var(--progress, 0%),
-      var(--track-bg) var(--progress, 0%) 100%
-    );
-    
-    mask-image: radial-gradient(
-      transparent var(--holesize),
-      black calc(var(--holesize) + 0.5px)
-    );
-  }
+  font-size: max(10vmin, 1.4rem)
+}
+
+.RadialProgress::before {
+  position: absolute;
+  content: "";
+  background-color: #fff;
+  height: 210px;
+  width: 210px;
+  border-radius: 50%;
+}
+
+.progress-value {
+  position: relative;
+}
+
+
+
+input[type="range"] {
+  width: 320px;
+  margin: 0 auto;
 }
