--- a/src/main/resources/templates/Sleep.html
+++ b/src/main/resources/templates/Sleep.html
@@ -7,24 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Template</title>
     <!-- Add your CSS links here -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/Sleep.css" />
 </head>
 
 <body>
 
-    <div class="RadialProgress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+    <div class="SleepProgress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
         <span class="progress-value"> 0% </span>
     </div>
-    
 
     <input type="range" value="25" min="0" max="100" />
 
-    <button id="sendRequestBtn">Send Request</button>
+    <button id="saveSleepBtn">Confirm</button>
 
-    <script src= "/js/script.js"> </script>
-    
+    <script src= "/js/Sleep.js"> </script>
+
 </body>
 
 </html>
-
 
