--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>login</title>
-  <link href="../static/css/login.css" rel="stylesheet">
+  <link href="/css/login.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     methods: {
       login:function (){
         console.log(this.userName,this.passWord);
-        axios.post('http://localhost:81/user/login',
+        axios.post('http://localhost:8080/user/login',
                 {
                   username: this.userName,
                   password: this.passWord,
