--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,55 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>login</title>
-  <link href="/css/login.css" rel="stylesheet">
+  <title>Please Log In</title>
 </head>
-
 <body>
-<div id="loginDiv">
-  <form  id="form" >
-    <h1 id="loginMsg">LOGIN IN</h1>
-    <p>Username:<input id="username" name="username" type="text" v-model="userName"></p>
-    <p>Password:<input id="password" name="password" type="password" v-model="passWord"></p>
-
-    <div id="subDiv">
-      <input type="submit" class="button" value="login up" @click="login">
-      <input type="reset" class="button" value="reset" >
-      <a href="../../../../../register.html">Register</a>
-    </div>
-  </form>
-</div>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script>
-  var app = new Vue({
-    el: "#loginDiv",
-    data: {
-      userName: "",
-      passWord: "",
-    },
-    methods: {
-      login:function (){
-        console.log(this.userName,this.passWord);
-        axios.post('http://localhost:8080/user/login',
-                {
-                  username: this.userName,
-                  password: this.passWord,
-                }).then( resp=> {
-          console.log(resp)
-          if (resp.data.code == '1') {
-            window.location.href = 'loginSuccess.html';
-          }else {
-            alert("Invalid Account or Passcode");
-            this.userName='';
-            this.passWord='';
-          }
-        })
-      }
-    }
-  })
-</script>
+<h1>Please Log In</h1>
+<div th:if="${param.error}">
+  Invalid username and password.</div>
+<div th:if="${param.logout}">
+  You have been logged out.</div>
+<form th:action="@{/login}" method="post">
+  <div>
+    <input type="text" name="username" placeholder="Username"/>
+  </div>
+  <div>
+    <input type="password" name="password" placeholder="Password"/>
+  </div>
+  <input type="submit" value="Log in" />
+</form>
 </body>
 </html>
