--- a/src/main/resources/templates/Physical.html
+++ b/src/main/resources/templates/Physical.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Template</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Add your CSS links here -->
-    <link rel="stylesheet" href="/css/Physical.css" />
+    <link rel="stylesheet" href="/static/css/Physical.css" />
 </head>
 
 <body>
@@ -18,10 +20,13 @@
 
 <input type="range" value="25" min="0" max="100" />
 
-<button id="savePhysicalBtn">Confirm</button>
+<button id="savePhysicalBtn" class="btn btn-primary btn-lg physicalSaveBtn">Confirm</button>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
-<script src= "/js/Physical.js"> </script>
+<script src= "/static/js/Physical.js"> </script>
 
 </body>
 
