--- a/src/main/resources/templates/Sleep.html
+++ b/src/main/resources/templates/Sleep.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Template</title>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Add your CSS links here -->
-    <link rel="stylesheet" href="/css/Sleep.css" />
+    <link rel="stylesheet" href="/static/css/Sleep.css" />
 </head>
 
 <body>
@@ -18,9 +20,13 @@
 
     <input type="range" value="25" min="0" max="100" />
 
-    <button id="saveSleepBtn">Confirm</button>
+    <button id="saveSleepBtn" class="btn btn-primary btn-lg sleepSaveBtn">Confirm</button>
 
-    <script src= "/js/Sleep.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+    <script src= "/static/js/Sleep.js"> </script>
 
 </body>
 
