--- a/src/main/resources/static/css/Physical.css
+++ b/src/main/resources/static/css/Physical.css
@@ -4,6 +4,11 @@
     --track-bg: hsl(233, 34%, 92%);
     --progress: 10deg;
 
+
+    margin-top:10%;
+    margin-left: auto;
+    margin-right: auto;
+
     height: 50vmin;
     background: conic-gradient(#7d2ae8 10deg, #ededed 0deg);
     border-radius: 50%;
@@ -17,25 +22,47 @@
     place-items: center;
     position: relative;
     font-weight: 700;
-    font-size: max(10vmin, 1.4rem)
+    font-size: max(10vmin, 1.4rem);
+}
+
+.physicalSaveBtn {
+    border-radius: 50px; /* Make the button more rounded */
+    padding: 15px 30px; /* Increase padding for larger appearance */
+    font-weight: 600;   /* Bold font */
+    background: linear-gradient(45deg, #e67e22, #e74c3c); /* Gradient background */
+    border: none;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    transition: all 0.3s ease 0s; /* Smooth transition effect */
+}
+
+.physicalSaveBtn:hover {
+    background: linear-gradient(45deg, #e67e22, #e74c3c); /* Reverse gradient on hover */
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4); /* Change shadow color on hover */
+    color: #fff;
+    transform: translateY(-7px); /* Button slightly moves up */
 }
 
 .PhysicalProgress::before {
     position: absolute;
     content: "";
     background-color: #fff;
-    height: 210px;
-    width: 210px;
+    height: 70%;
+    width: 70%;
     border-radius: 50%;
 }
 
 .progress-value {
-    position: relative;
+    position: absolute;
 }
 
 
 
 input[type="range"] {
-    width: 320px;
-    margin: 0 auto;
+    margin-top: 5%;
+    margin-left: 30%;
+    width: 35%;
+
 }
+
+
+
