--- a/src/main/resources/templates/Mental.html
+++ b/src/main/resources/templates/Mental.html
@@ -23,6 +23,8 @@
 
 <button id="saveMentalBtn" class="btn btn-primary btn-lg mentalSaveBtn">Confirm</button>
 
+<a href="Physical.html" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
