--- a/src/main/resources/templates/Sleep.html
+++ b/src/main/resources/templates/Sleep.html
@@ -22,6 +22,8 @@
 
     <button id="saveSleepBtn" class="btn btn-primary btn-lg sleepSaveBtn">Confirm</button>
 
+    <a href="Mental.html" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
