--- a/src/main/resources/templates/Physical.html
+++ b/src/main/resources/templates/Physical.html
@@ -22,6 +22,8 @@
 
 <button id="savePhysicalBtn" class="btn btn-primary btn-lg physicalSaveBtn">Confirm</button>
 
+<a href="******" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
