--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html>
 <head>
-  <title>Please Log In</title>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 <h1>Please Log In</h1>
-<div th:if="${param.error}">
-  Invalid username and password.</div>
-<div th:if="${param.logout}">
-  You have been logged out.</div>
-<form th:action="@{/login}" method="post">
+<form action="/user/authorize" method="post">
   <div>
     <input type="text" name="username" placeholder="Username"/>
   </div>
   <div>
     <input type="password" name="password" placeholder="Password"/>
   </div>
-  <input type="submit" value="Log in" />
+  <input type="submit" value="Log in"/>
 </form>
 </body>
 </html>
