--- a/reactapp/src/components/index.css
+++ b/reactapp/src/components/index.css
@@ -24,8 +24,8 @@
 
     /* Position (example: centering it on the screen) */
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 900px;
+    left: 25%;
     transform: translate(-50%, -50%);
 }
 
@@ -35,6 +35,88 @@
 }
 
 .fetch-button:active {
+    background-color: #2d7031;
+    /* Even darker green when button is active (clicked) */
+}
+
+
+/* index.css */
+
+.fetch-button2 {
+    /* Dimensions */
+    padding: 10px 20px;
+    font-size: 16px;
+
+    /* Colors */
+    background-color: #4CAF50;
+    /* Green background */
+    color: white;
+    /* White text */
+
+    /* Borders */
+    border: none;
+    border-radius: 5px;
+
+    /* Cursor */
+    cursor: pointer;
+
+    /* Other Styles */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+
+    /* Position (example: centering it on the screen) */
+    position: absolute;
+    top: 900px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.fetch-button2:hover {
+    background-color: #45a049;
+    /* Darker green when hovered */
+}
+
+.fetch-button2:active {
+    background-color: #2d7031;
+    /* Even darker green when button is active (clicked) */
+}
+/* index.css */
+
+.fetch-button3 {
+    /* Dimensions */
+    padding: 10px 20px;
+    font-size: 16px;
+
+    /* Colors */
+    background-color: #4CAF50;
+    /* Green background */
+    color: white;
+    /* White text */
+
+    /* Borders */
+    border: none;
+    border-radius: 5px;
+
+    /* Cursor */
+    cursor: pointer;
+
+    /* Other Styles */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+
+    /* Position (example: centering it on the screen) */
+    position: absolute;
+    top: 900px;
+    left: 75%;
+    transform: translate(-50%, -50%);
+}
+
+.fetch-button3:hover {
+    background-color: #45a049;
+    /* Darker green when hovered */
+}
+
+.fetch-button3:active {
     background-color: #2d7031;
     /* Even darker green when button is active (clicked) */
 }
