--- a/src/main/resources/static/css/Sleep.css
+++ b/src/main/resources/static/css/Sleep.css
@@ -1,8 +1,20 @@
+.prompt {
+    margin-top:4%;
+    margin-left: 33%;
+    font-size: xxx-large ;
+    font-family: Cursive;
+}
+
 .SleepProgress {
     --hue: 220;
     --holesize: 65%;
     --track-bg: hsl(233, 34%, 92%);
     --progress: 10deg;
+
+
+    margin-top:6%;
+    margin-left: auto;
+    margin-right: auto;
 
     height: 50vmin;
     background: conic-gradient(#7d2ae8 10deg, #ededed 0deg);
@@ -17,25 +29,51 @@
     place-items: center;
     position: relative;
     font-weight: 700;
-    font-size: max(10vmin, 1.4rem)
+    font-size: max(10vmin, 1.4rem);
+}
+
+.sleepSaveBtn {
+    border-radius: 50px; /* Make the button more rounded */
+    padding: 15px 30px; /* Increase padding for larger appearance */
+    font-weight: 600;   /* Bold font */
+    background: linear-gradient(45deg, #007bff, #6610f2); /* Gradient background */
+    border: none;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    transition: all 0.3s ease 0s; /* Smooth transition effect */
+}
+
+.sleepSaveBtn:hover {
+    background: linear-gradient(45deg, #6610f2, #007bff); /* Reverse gradient on hover */
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4); /* Change shadow color on hover */
+    color: #fff;
+    transform: translateY(-7px); /* Button slightly moves up */
 }
 
 .SleepProgress::before {
     position: absolute;
     content: "";
     background-color: #fff;
-    height: 210px;
-    width: 210px;
+    height: 70%;
+    width: 70%;
     border-radius: 50%;
 }
 
 .progress-value {
-    position: relative;
+    position: absolute;
+}
+
+.nxt{
+    position: fixed;   /* Fixed positioning */
+    top: 50%;          /* Center vertically */
+    right: 10px;       /* 10 pixels from the right side */
+    transform: translateY(-50%);  /* Offset vertically to ensure it's perfectly centered */
 }
 
 
 
 input[type="range"] {
-    width: 320px;
-    margin: 0 auto;
+    margin-top: 5%;
+    margin-left: 30%;
+    width: 35%;
+
 }
