--- a/src/main/resources/templates/Mental.html
+++ b/src/main/resources/templates/Mental.html
@@ -6,11 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sample Template</title>
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Add your CSS links here -->
   <link rel="stylesheet" href="/css/Mental.css" />
 </head>
 
 <body>
+
+<div class = "prompt">RATE YOUR MENTAL STATE</div>
 
 <div class="MentalProgress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
   <span class="progress-value"> 0% </span>
@@ -18,7 +23,12 @@
 
 <input type="range" value="25" min="0" max="100" />
 
-<button id="saveMentalBtn">Confirm</button>
+<button id="saveMentalBtn" class="btn btn-primary btn-lg mentalSaveBtn">Confirm</button>
+
+<a href="/user/WellnessPage" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 
@@ -27,4 +37,3 @@
 </body>
 
 </html>
-
