--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,18 +2,21 @@
 <html>
 <head>
   <title>Login</title>
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="/static/css/login.css">
 </head>
+
 <body>
-<h1>Please Log In</h1>
+<div class = "prompt"> Visualize Your Wellbeing Journey </div>
 <form action="/user/authorize" method="post">
   <div>
-    <input type="text" name="username" placeholder="Username"/>
+    <input type="text" class="custom-input" name="username" placeholder="Username"/>
   </div>
   <div>
-    <input type="password" name="password" placeholder="Password"/>
+    <input type="password" class="custom-input" name="password" placeholder="Password"/>
   </div>
-  <input type="submit" value="Log in"/>
+
+  <input type="submit" class="large-button" value="Log in"/>
+
 </form>
 </body>
 </html>
