--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -49,6 +49,7 @@
   /* Add some space below the headline */
   font-weight: bold;
   /* Make the text bold */
+  font-family: Cursive;
 }
 
 /* Styles for the Monthly Data headline */
