--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -34,7 +34,8 @@ body {
 }
 
 .large-button {
-    margin-top: 10%;
+    position: absolute;
+    margin-top: 2%;
     margin-left: 45%;
     font-size: 20px;           /* Increase font size */
     padding: 15px 30px;        /* Add more padding: 15px top/bottom, 30px left/right */
