--- a/src/main/resources/templates/Physical.html
+++ b/src/main/resources/templates/Physical.html
@@ -25,7 +25,9 @@
 
 <button id="savePhysicalBtn" class="btn btn-primary btn-lg physicalSaveBtn">Confirm</button>
 
-<a href="http://localhost:3000" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+<a href="/user/DoYouKnowPage" class="btn btn-danger btn-lg nxt" id="nextButton">Next</a>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
