--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Login</title>
-  <link rel="stylesheet" href="/static/css/login.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
